# MPI_SOURCES

./: CMakeLists.template.txt  CMakeLists.txt  README.md  dir.txt
13-1/: CMakeLists.txt  rank_sort.c
13-2/: CMakeLists.txt  quick_sort.c  readme.txt
13-3/: CMakeLists.txt  psrs_sort.c  readme.txt
14-1/: CMakeLists.txt  gen_ped.c  kmp.c
14-2/: CMakeLists.txt  rand_match.c  readme.txt
14-3/: CMakeLists.txt  app_match.c  readme.txt
15-1/: CMakeLists.txt  closure.c  readme.txt
15-2/: CMakeLists.txt  connect.c
15-3/: 1result.txt  CMakeLists.txt  readme.txt  shortest.c
15-4/: CMakeLists.txt  mst.c  readme.txt
16-1/: CMakeLists.txt  queen.c
16-2/: CMakeLists.txt  readme.txt  sample2.txt  sample3.txt  sat.c
16-3/: CMakeLists.txt  box.c  data1  readme.txt
16-4/: CMakeLists.txt  beibao.c  readme.txt
16-5/: CMakeLists.txt  readme.txt  tsp.c
17-1/: CMakeLists.txt  including.c  readme.txt
17-2/: CMakeLists.txt  intersect.c  readme.txt
17-3/: CMakeLists.txt  c.c  readme.txt
18-1/: CMakeLists.txt  dataIn.txt  readme.txt  transpose.c
18-2/: CMakeLists.txt  dataIn.txt  matrixvector.c  readme.txt
18-3/: CMakeLists.txt  dataIn.txt  matrix.c  readme.txt
18-4/: CMakeLists.txt  cannon.c  readme.txt
18-5/: CMakeLists.txt  ludep.c  readme.txt
18-6/: CMakeLists.txt  dataIn.txt  qr.c  readme.txt
18-7/: CMakeLists.txt  dataIn.txt  readme.txt  svd.c
18-8/: CMakeLists.txt  cholersky.c  dataIn.txt  readme.txt
18-9/: CMakeLists.txt  dataIn.txt  invert.c  readme.txt
19-1/: CMakeLists.txt  gauss.c
19-2/: CMakeLists.txt  dataIn.txt  jordan.c  readme.txt
20-1/: CMakeLists.txt  dataIn.txt  jacobi.c  readme.txt
20-2/: CMakeLists.txt  dataIn.txt  seidel.c
20-3/: CMakeLists.txt  dataIn.txt  readme.txt  relaxation.c
21-1/: CMakeLists.txt  power.c  readme.txt
21-2/: CMakeLists.txt  cjacobi.c  dataIn.txt
21-3/: CMakeLists.txt  dataIn.txt  readme.txt  single.c
21-4/: CMakeLists.txt  qr_value.c  readme.txt
22-1/: CMakeLists.txt  fft.c
22-2/: CMakeLists.txt  dwt.c  readme.txt
