cmake_minimum_required ( VERSION 3.20 )

project (MPI_TESTS)

add_subdirectory(13-1)
add_subdirectory(13-2)
add_subdirectory(13-3)
add_subdirectory(14-1)
add_subdirectory(14-2)
add_subdirectory(14-3)
add_subdirectory(15-1)
add_subdirectory(15-2)
add_subdirectory(15-3)
add_subdirectory(15-4)
add_subdirectory(16-1)
add_subdirectory(16-2)
add_subdirectory(16-3)
add_subdirectory(16-4)
add_subdirectory(16-5)
add_subdirectory(17-1)
add_subdirectory(17-2)
add_subdirectory(17-3)
add_subdirectory(18-1)
add_subdirectory(18-2)
add_subdirectory(18-3)
add_subdirectory(18-4)
add_subdirectory(18-5)
add_subdirectory(18-6)
add_subdirectory(18-7)
add_subdirectory(18-8)
add_subdirectory(18-9)
add_subdirectory(19-1)
add_subdirectory(19-2)
add_subdirectory(20-1)
add_subdirectory(20-2)
add_subdirectory(20-3)
add_subdirectory(21-1)
add_subdirectory(21-2)
add_subdirectory(21-3)
add_subdirectory(21-4)
add_subdirectory(22-1)
add_subdirectory(22-2)